feat: config screen and more